trunk/Archive2/71/2fb4b717f6fece/output
main.cpp: In member function 'void Insert<T>::into(C&) &&':
main.cpp:11:34: error: 'cont' was not declared in this scope
     auto pos = std::lower_bound (cont.begin (), cont.end (), _data);
                                  ^
